2006-09-24 [colin]	0.3cvs15

	* src/notification_prefs.c
		Include main.h for sylpheed_is_exiting()

2006-09-23 [colin]	0.3cvs14

	* src/notification_prefs.c
		Don't do gtk stuff on exit

2006-09-23 [holger]	0.3cvs13

	* src/notification_popup.c
		Make code more flexible, preparing for
		having seperate popups for different
		types of incomming messages (will most
		likely only get into the libnotify part).

2006-09-23 [holger]	0.3cvs12

	* src/notification_prefs.c
		Make it clear that the window manager is free
		to ignore the popup width and position selected
		by the user.

2006-09-22 [ticho]	0.3cvs11

	* configure.ac
		Update required sylpheed-claws version to 2.4.0.200.

2006-09-22 [holger]	0.3cvs10

	* src/notification_core.c
		Add some debugging info.
	* src/notification_command.c
	* src/notification_popup.c
		For now, ignore folders with foldertype
		F_NEWS and F_UNKNOWN.

2006-09-21 [holger]	0.3cvs9

	* src/notification_core.c
		Make plugin safe against msgid set to NULL.

2006-09-18 [holger]	0.3cvs8

	* src/notification_core.c
		Change notification implementation in a way
		that every msg is only warned about once,
		distinguished by msgid. This will result in
		getting only one notification for receiving
		double messages, but this is probably the
		smaller annoyance.

2006-09-17 [holger]	0.3cvs7

	* commitHelper
		Use the same version number in ChangeLog and plugin.
	* configure.ac
		Update to check for libnotify. Required libnotify version
		is set to a high value. 0.4.3 or later will probably
		work, but is not released yet, and I didn't verify
		svn. Consider libnotify support to be deactivated for
		now.
	* src/Makefile.am
	* src/notification_pixbuf.c
	* src/notification_pixbuf.h
	* src/notification_plugin.c
	* src/notification_popup.c
	* src/notification_prefs.c
	* src/notification_prefs.h
	* src/raw_sylpheed_claws_logo_64x64.h
		Include support for libnotify.
	* src/notification_core.c
	* src/notification_core.h