@@ -1,3 +1,10 @@
+2006-09-24 [holger]	0.3cvs16
+
+	* src/notification_popup.c
+		Have seperate popups for incomming mail,
+		calendar messages, RSS feeds and news
+		messages when using libnotify.
+
 2006-09-24 [colin]	0.3cvs15
 
 	* src/notification_prefs.c
